<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="45dp"
                android:padding="8dp"
                android:text="Register"
                android:textColor="@color/black"
                android:textSize="38sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="316dp"
                app:srcCompat="@drawable/register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">


                <EditText
                    android:id="@+id/registerName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/name"

                    android:paddingHorizontal="30dp"
                    android:textColor="@color/black"
                    android:textColorHint="#9C000000" />


                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/email"
                    android:paddingHorizontal="30dp"
                    android:textColor="@color/black"
                    android:textColorHint="#9C000000" />

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/password"
                    android:paddingHorizontal="30dp"
                    android:textColor="@color/black"
                    android:textColorHint="#9C000000" />

                <EditText
                    android:id="@+id/registerConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/confirm_password"
                    android:paddingHorizontal="30dp"
                    android:textColor="@color/black"
                    android:textColorHint="#9C000000" />

                <TextView
                    android:id="@+id/signupRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="14dp"
                    android:padding="8dp"
                    android:text="@string/already_have_an_account_login"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/register"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>