<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MyRentActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <TextView
            android:id="@+id/custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_rent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <EditText
                android:id="@+id/edt_ref_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="8dp"
                android:hint="Reference Number"
                android:padding="24dp"
                android:textColor="@color/black"
                android:textColorHint="#9C000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <Spinner
                    android:id="@+id/spinner_property_type"
                    android:layout_width="142pt"
                    android:layout_height="30pt"

                    ></Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <Spinner
                    android:id="@+id/spinner_bedroom"
                    android:layout_width="142pt"
                    android:layout_height="30pt"

                    ></Spinner>

            </LinearLayout>


            <EditText
                android:id="@+id/Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableLeft="@drawable/date_range"
                android:drawablePadding="8dp"
                android:hint="Date and Time"
                android:inputType="datetime"
                android:padding="24dp"
                android:textColor="@color/black"
                android:textColorHint="#9C000000" />

            <EditText
                android:id="@+id/Price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="8dp"
                android:hint="Monthly Price"
                android:padding="24dp"
                android:textColor="@color/black"
                android:textColorHint="#9C000000" />

            <RadioGroup
                android:id="@+id/radgp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Furnished"
                    android:textSize="6pt"
                    android:textColor="#9C000000"
                    android:textStyle="bold">

                </RadioButton>

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Part Furnished"
                    android:textColor="#9C000000"
                    android:textSize="6pt"
                    android:textStyle="bold">

                </RadioButton>

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UnFurnished"
                    android:textColor="#9C000000"
                    android:textSize="6pt"
                    android:textStyle="bold">

                </RadioButton>
            </RadioGroup>

            <EditText
                android:id="@+id/Remark"
                android:layout_width="143pt"
                android:layout_height="50pt"
                android:layout_margin="16dp"
                android:drawablePadding="8dp"
                android:hint="Remarks"
                android:padding="24dp"
                android:textColor="@color/black"
                android:textColorHint="#9C000000" />

            <EditText
                android:id="@+id/Reporter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="8dp"
                android:hint="Name of the Repoter"
                android:padding="24dp"
                android:textColor="@color/black"
                android:textColorHint="#9C000000" />

            <Button
                android:id="@+id/UpdateButton"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/black"
                android:layout_marginTop="20dp"
                android:text="@string/update"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/Cancel"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/black"
                android:layout_marginTop="20dp"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:onClick="TxtClickCancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>